--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-18 03:54:22
+# build time: 2021-02-20 05:31:00
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = https://223.5.5.5/dns-query,https://8.8.8.8/dns-query,tls://223.5.5.5:853,tls://8.8.8.8:853
+dns-server = tls://223.5.5.5:853,https://cloudflare-dns.com/dns-query,tls://8.8.8.8:853
 [Rule]
 #
 # 黑名单中包含了 GFWList 中定义的无法访问的网站，剩下的网站直连。
@@ -170,6 +170,7 @@ DOMAIN-SUFFIX,aceros-de-hispania.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acevpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acg18.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acgkj.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,acgnx.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acmedia365.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acmetoy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acnw.com.au,Proxy,force-remote-dns
@@ -949,6 +950,7 @@ DOMAIN-SUFFIX,cipfg.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,circlethebayfortibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cirosantilli.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,citizencn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,citizenlab.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,citizenlab.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,citizenscommission.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,citizensradio.org,Proxy,force-remote-dns
@@ -1273,7 +1275,6 @@ DOMAIN-SUFFIX,dolc.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dolf.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dollf.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,domain.club.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,domainhelp.search.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,domains.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,domaintoday.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dongtaiwang.com,Proxy,force-remote-dns
@@ -1946,6 +1947,7 @@ DOMAIN-SUFFIX,gokbayrak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,golang.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldbet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldbetsports.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,golden-ages.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldeneyevault.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldenfrog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldjizz.com,Proxy,force-remote-dns
@@ -2092,6 +2094,7 @@ DOMAIN-SUFFIX,gstatic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gtricks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gts-vpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gtv.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gtv1.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gu-chu-sum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,guaguass.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,guaguass.org,Proxy,force-remote-dns
@@ -2289,6 +2292,7 @@ DOMAIN-SUFFIX,homeservershow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongkongfp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongmeimei.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongzhi.li,Proxy,force-remote-dns
+DOMAIN-SUFFIX,honven.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hootsuite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hoovers.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hopedialogue.org,Proxy,force-remote-dns
@@ -2387,6 +2391,7 @@ DOMAIN-SUFFIX,iask.bz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iask.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iav19.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ibiblio.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ibit.am,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iblist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iblogserv-f.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ibros.org,Proxy,force-remote-dns
@@ -2732,6 +2737,7 @@ DOMAIN-SUFFIX,kurashsultan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kurtmunger.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kusocity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kwcg.ca,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kwok7.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kwongwah.com.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kxsw.life,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kyofun.com,Proxy,force-remote-dns
@@ -2748,6 +2754,7 @@ DOMAIN-SUFFIX,lama.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamayeshe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamnia.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamrim.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,landofhope.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lanterncn.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lantosfoundation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laod.cn,Proxy,force-remote-dns
@@ -2873,6 +2880,7 @@ DOMAIN-SUFFIX,lsmradio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lsmwebcast.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lsxszzg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ltn.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,luckydesigner.space,Proxy,force-remote-dns
 DOMAIN-SUFFIX,luke54.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,luke54.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lupm.org,Proxy,force-remote-dns
@@ -3255,6 +3263,7 @@ DOMAIN-SUFFIX,news.singtao.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.tvb.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.tvbs.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.yahoo.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.ycombinator.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news100.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,newsancai.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,newschinacomment.org,Proxy,force-remote-dns
@@ -3393,6 +3402,7 @@ DOMAIN-SUFFIX,occupytiananmen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oclp.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ocreampies.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ocry.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ocsp.int-x3.letsencrypt.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,october-review.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oculus.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oculuscdn.com,Proxy,force-remote-dns
@@ -3402,6 +3412,7 @@ DOMAIN-SUFFIX,officeoftibet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ofile.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ogaoga.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ogate.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ohmyrss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oikos.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oiktv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oizoblog.com,Proxy,force-remote-dns
@@ -3884,6 +3895,7 @@ DOMAIN-SUFFIX,rsdlmonitor.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsf-chinese.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsgamen.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,rsshub.app,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rssmeme.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rtalabel.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rthk.hk,Proxy,force-remote-dns
@@ -3951,11 +3963,12 @@ DOMAIN-SUFFIX,scramble.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scratch.mit.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scribd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scriptspot.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,seapuff.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,search.aol.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,search.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,search.yahoo.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,search.yahoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,searchtruth.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,searx.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,secretchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,secretgarden.no,Proxy,force-remote-dns
 DOMAIN-SUFFIX,secretsline.biz,Proxy,force-remote-dns
@@ -4253,6 +4266,7 @@ DOMAIN-SUFFIX,stormmediagroup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stoweboyd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stranabg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,straplessdildo.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,streamate.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,streamingthe.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,streema.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,strikingly.com,Proxy,force-remote-dns
@@ -4429,6 +4443,7 @@ DOMAIN-SUFFIX,thefacebook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thefrontier.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thegioitinhoc.vn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thegly.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,theguardian.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thehots.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thehousenews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thehun.net,Proxy,force-remote-dns
@@ -4696,6 +4711,7 @@ DOMAIN-SUFFIX,tushycash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuzaijidi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tv.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tv.jtbc.joins.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tvants.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tvboxnow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tvider.com,Proxy,force-remote-dns
@@ -5259,7 +5275,6 @@ DOMAIN-SUFFIX,www.americorps.gov,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.antd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.aolnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.businessinsider.com.au,Proxy,force-remote-dns
-DOMAIN-SUFFIX,www.citizenlab.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.cmoinc.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.cool18.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.dmm.com,Proxy,force-remote-dns
@@ -5446,6 +5461,7 @@ DOMAIN-SUFFIX,yourprivatevpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yourtrap.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yousendit.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youshun12.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youthforfreechina.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youthnetradio.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtube-nocookie.com,Proxy,force-remote-dns
