--- a/sr_backcn.conf
+++ b/sr_backcn.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-18 03:54:22
+# build time: 2021-02-20 05:31:00
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = https://223.5.5.5/dns-query,https://8.8.8.8/dns-query,tls://223.5.5.5:853,tls://8.8.8.8:853
+dns-server = tls://223.5.5.5:853,https://cloudflare-dns.com/dns-query,tls://8.8.8.8:853
 [Rule]
 #
 # 国内外划分，对中国网站代理，外国网站直连。提供给海外华侨使用。
