--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-18 03:54:22
+# build time: 2021-02-20 05:31:00
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = tls://223.5.5.5:853,https://223.5.5.5/dns-query,https://cloudflare-dns.com/dns-query,tls://8.8.8.8:853
+dns-server = tls://223.5.5.5:853,https://cloudflare-dns.com/dns-query,tls://8.8.8.8:853
 [Rule]
 #
 # 白名单中包含了境外网站中可以访问的那些，对不确定的网站则尽可能地代理。
@@ -452,6 +452,7 @@ DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mobileads.google.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ads.google.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,afd.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.cn,Proxy,force-remote-dns
 #175 华尔街邮报
 DOMAIN-SUFFIX,dowjones.com,Proxy,force-remote-dns
 #159
