--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2021-02-20 05:31:00
+# build time: 2021-02-20 05:49:36
 
 [General]
 bypass-system = true
@@ -340,8 +340,31 @@ DOMAIN-SUFFIX,zhihu.com,Direct
 DOMAIN-SUFFIX,zillow.com,Direct
 DOMAIN-SUFFIX,zoho.com,Direct
 
+DOMAIN-KEYWORD,amazon,PROXY
+DOMAIN-KEYWORD,google,PROXY
+DOMAIN-KEYWORD,gmail,PROXY
+DOMAIN-KEYWORD,youtube,PROXY
+DOMAIN-KEYWORD,facebook,PROXY
+DOMAIN-SUFFIX,fb.me,PROXY
+DOMAIN-SUFFIX,fbcdn.net,PROXY
+DOMAIN-KEYWORD,twitter,PROXY
+DOMAIN-KEYWORD,instagram,PROXY
+DOMAIN-KEYWORD,dropbox,PROXY
+DOMAIN-SUFFIX,twimg.com,PROXY
+DOMAIN-KEYWORD,blogspot,PROXY
+DOMAIN-SUFFIX,youtu.be,PROXY
+DOMAIN-KEYWORD,whatsapp,PROXY
 
 DOMAIN-SUFFIX,cn,DIRECT
+DOMAIN-KEYWORD,-cn,DIRECT
+DOMAIN-KEYWORD,alicdn,DIRECT
+DOMAIN-KEYWORD,alipay,DIRECT
+DOMAIN-KEYWORD,taobao,DIRECT
+DOMAIN-KEYWORD,baidu,DIRECT
+DOMAIN,cdn.hockeyapp.net,DIRECT
+DOMAIN-SUFFIX,office.com,DIRECT
+DOMAIN-SUFFIX,office365.com,DIRECT
+DOMAIN-KEYWORD,officecdn,DIRECT
 GEOIP,CN,DIRECT
 
 # 手工定义的 Direct 列表
