--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2021-02-20 05:49:36
+# build time: 2021-02-20 06:00:56
 
 [General]
 bypass-system = true
@@ -340,20 +340,6 @@ DOMAIN-SUFFIX,zhihu.com,Direct
 DOMAIN-SUFFIX,zillow.com,Direct
 DOMAIN-SUFFIX,zoho.com,Direct
 
-DOMAIN-KEYWORD,amazon,PROXY
-DOMAIN-KEYWORD,google,PROXY
-DOMAIN-KEYWORD,gmail,PROXY
-DOMAIN-KEYWORD,youtube,PROXY
-DOMAIN-KEYWORD,facebook,PROXY
-DOMAIN-SUFFIX,fb.me,PROXY
-DOMAIN-SUFFIX,fbcdn.net,PROXY
-DOMAIN-KEYWORD,twitter,PROXY
-DOMAIN-KEYWORD,instagram,PROXY
-DOMAIN-KEYWORD,dropbox,PROXY
-DOMAIN-SUFFIX,twimg.com,PROXY
-DOMAIN-KEYWORD,blogspot,PROXY
-DOMAIN-SUFFIX,youtu.be,PROXY
-DOMAIN-KEYWORD,whatsapp,PROXY
 
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-KEYWORD,-cn,DIRECT
@@ -535,6 +521,45 @@ DOMAIN-SUFFIX,cdn-apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy,force-remote-dns
 
+
+DOMAIN-KEYWORD,amazon,PROXY
+DOMAIN-KEYWORD,google,PROXY
+DOMAIN-KEYWORD,gmail,PROXY
+DOMAIN-KEYWORD,youtube,PROXY
+DOMAIN-KEYWORD,facebook,PROXY
+DOMAIN-SUFFIX,fb.me,PROXY
+DOMAIN-SUFFIX,fbcdn.net,PROXY
+DOMAIN-KEYWORD,twitter,PROXY
+DOMAIN-KEYWORD,instagram,PROXY
+DOMAIN-KEYWORD,dropbox,PROXY
+DOMAIN-SUFFIX,twimg.com,PROXY
+DOMAIN-KEYWORD,blogspot,PROXY
+DOMAIN-SUFFIX,youtu.be,PROXY
+DOMAIN-KEYWORD,whatsapp,PROXY
+
+DOMAIN-KEYWORD,admarvel,REJECT
+DOMAIN-KEYWORD,admaster,REJECT
+DOMAIN-KEYWORD,adsage,REJECT
+DOMAIN-KEYWORD,adsmogo,REJECT
+DOMAIN-KEYWORD,adsrvmedia,REJECT
+DOMAIN-KEYWORD,adwords,REJECT
+DOMAIN-KEYWORD,adservice,REJECT
+DOMAIN-KEYWORD,domob,REJECT
+DOMAIN-KEYWORD,duomeng,REJECT
+DOMAIN-KEYWORD,dwtrack,REJECT
+DOMAIN-KEYWORD,guanggao,REJECT
+DOMAIN-KEYWORD,lianmeng,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
+DOMAIN-KEYWORD,omgmta,REJECT
+DOMAIN-KEYWORD,openx,REJECT
+DOMAIN-KEYWORD,partnerad,REJECT
+DOMAIN-KEYWORD,pingfore,REJECT
+DOMAIN-KEYWORD,supersonicads,REJECT
+DOMAIN-KEYWORD,uedas,REJECT
+DOMAIN-KEYWORD,umeng,REJECT
+DOMAIN-KEYWORD,usage,REJECT
+DOMAIN-KEYWORD,wlmonitor,REJECT
+DOMAIN-KEYWORD,zjtoolbar,REJECT
 
 FINAL,PROXY
 
