--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2021-02-20 06:00:56
+# build time: 2021-02-20 08:16:21
 
 [General]
 bypass-system = true
@@ -222,127 +222,127 @@ DOMAIN-SUFFIX,kikibt8.com,Reject
 DOMAIN-SUFFIX,kikibt8.xyz,Reject
 
 # 手工定义的 Proxy 列表
-DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,theinitium.com,Proxy
+DOMAIN-SUFFIX,youtu.be,Proxy
+DOMAIN-SUFFIX,youtube.com,Proxy
+DOMAIN-SUFFIX,netflix.com,Proxy
 #161 可能以后会和GFWList重复
-DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,9gag.com,Proxy
 #Telegram
-IP-CIDR,67.198.55.0/24,Proxy,force-remote-dns
-IP-CIDR,91.108.4.0/22,Proxy,force-remote-dns
-IP-CIDR,91.108.8.0/22,Proxy,force-remote-dns
-IP-CIDR,91.108.12.0/22,Proxy,force-remote-dns
-IP-CIDR,91.108.16.0/22,Proxy,force-remote-dns
-IP-CIDR,91.108.56.0/22,Proxy,force-remote-dns
-IP-CIDR,109.239.140.0/24,Proxy,force-remote-dns
-IP-CIDR,149.154.160.0/20,Proxy,force-remote-dns
-IP-CIDR,149.154.164.0/22,Proxy,force-remote-dns
-IP-CIDR,149.154.168.0/22,Proxy,force-remote-dns
-IP-CIDR,149.154.172.0/22,Proxy,force-remote-dns
+IP-CIDR,67.198.55.0/24,Proxy
+IP-CIDR,91.108.4.0/22,Proxy
+IP-CIDR,91.108.8.0/22,Proxy
+IP-CIDR,91.108.12.0/22,Proxy
+IP-CIDR,91.108.16.0/22,Proxy
+IP-CIDR,91.108.56.0/22,Proxy
+IP-CIDR,109.239.140.0/24,Proxy
+IP-CIDR,149.154.160.0/20,Proxy
+IP-CIDR,149.154.164.0/22,Proxy
+IP-CIDR,149.154.168.0/22,Proxy
+IP-CIDR,149.154.172.0/22,Proxy
 #instagram
-DOMAIN-SUFFIX,cdninstagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdninstagram.com,Proxy
 #disqus
-DOMAIN-SUFFIX,disquscdn.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,gist.github.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,github.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,github.io,Proxy,force-remote-dns
-DOMAIN-SUFFIX,githubusercontent.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,disquscdn.com,Proxy
+DOMAIN-SUFFIX,gist.github.com,Proxy
+DOMAIN-SUFFIX,github.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
 # 首页直连，但子域名需翻墙
-DOMAIN-SUFFIX,onedrive.live.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,onedrive.live.com,Proxy
 #20 开车
-DOMAIN-SUFFIX,t66y.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,91porn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,t66y.com,Proxy
+DOMAIN-SUFFIX,91porn.com,Proxy
 #132
-DOMAIN-SUFFIX,feedly.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,feedly.com,Proxy
 #50 whatsapp
-DOMAIN-SUFFIX,whatsapp.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.net,Proxy,force-remote-dns
-IP-CIDR,18.194.0.0/15,Proxy,force-remote-dns
-IP-CIDR,34.224.0.0/12,Proxy,force-remote-dns
+DOMAIN-SUFFIX,whatsapp.com,Proxy
+DOMAIN-SUFFIX,whatsapp.net,Proxy
+IP-CIDR,18.194.0.0/15,Proxy
+IP-CIDR,34.224.0.0/12,Proxy
 #54 台湾香港澳门 常用网站
-DOMAIN-SUFFIX,ptt.cc,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mingpaocanada.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mingpao.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,appledaily.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,appledaily.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,nextmag.com.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,thestandnews.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ptt.cc,Proxy
+DOMAIN-SUFFIX,mingpaocanada.com,Proxy
+DOMAIN-SUFFIX,mingpao.com,Proxy
+DOMAIN-SUFFIX,appledaily.com,Proxy
+DOMAIN-SUFFIX,appledaily.tw,Proxy
+DOMAIN-SUFFIX,nextmag.com.tw,Proxy
+DOMAIN-SUFFIX,thestandnews.com,Proxy
 #60 GMail
 # 手机 smtp 和 imap 需要用到
-DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gmail.com,Proxy
 #72 #112 Google Voice
-IP-CIDR,74.125.0.0/16,Proxy,force-remote-dns
+IP-CIDR,74.125.0.0/16,Proxy
 #85（可能冗余）
-DOMAIN-SUFFIX,yt3.ggpht.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,www-google-analytics.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ssl-google-analytics.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,partnerad.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pagead.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pagead.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mobileads.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ads.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,afd.l.google.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,google.cn,Proxy,force-remote-dns
+DOMAIN-SUFFIX,yt3.ggpht.com,Proxy
+DOMAIN-SUFFIX,www-google-analytics.l.google.com,Proxy
+DOMAIN-SUFFIX,ssl-google-analytics.l.google.com,Proxy
+DOMAIN-SUFFIX,partnerad.l.google.com,Proxy
+DOMAIN-SUFFIX,pagead.l.google.com,Proxy
+DOMAIN-SUFFIX,pagead.google.com,Proxy
+DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy
+DOMAIN-SUFFIX,mobileads.google.com,Proxy
+DOMAIN-SUFFIX,ads.google.com,Proxy
+DOMAIN-SUFFIX,afd.l.google.com,Proxy
+DOMAIN-SUFFIX,google.cn,Proxy
 #175 华尔街邮报
-DOMAIN-SUFFIX,dowjones.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dowjones.com,Proxy
 #159
-DOMAIN-SUFFIX,thetvdb.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,thetvdb.com,Proxy
 #180 OneDrive（可能冗余）
-DOMAIN-SUFFIX,bcbits.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ogma.iad.appboy.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,centralus1.mediap.svc.ms,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dm.files.1drv.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mobile.pipe.aria.microsoft.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,gate.hockeyapp.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,api.onedrive.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bcbits.com,Proxy
+DOMAIN-SUFFIX,ogma.iad.appboy.com,Proxy
+DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy
+DOMAIN-SUFFIX,skyapi.live.net,Proxy
+DOMAIN-SUFFIX,centralus1.mediap.svc.ms,Proxy
+DOMAIN-SUFFIX,dm.files.1drv.com,Proxy
+DOMAIN-SUFFIX,mobile.pipe.aria.microsoft.com,Proxy
+DOMAIN-SUFFIX,gate.hockeyapp.net,Proxy
+DOMAIN-SUFFIX,skyapi.live.net,Proxy
+DOMAIN-SUFFIX,api.onedrive.com,Proxy
+DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy
 #183
-DOMAIN-SUFFIX,mendeley.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mendeley.com,Proxy
 #192 播客收听应用程序 overcast
-DOMAIN-SUFFIX,overcast.fm,Proxy,force-remote-dns
+DOMAIN-SUFFIX,overcast.fm,Proxy
 #205 APPLE NEWS
-DOMAIN-SUFFIX,news-events.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,news-edge.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apple.comscoreresearch.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,play.itunes.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,play-cdn.itunes-apple.com.akadns.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ls.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,cvws.apple-dns.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,news.apple-dns.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,gateway.fe.apple-dns.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,akamaiedge.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,gs-loc.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apple.news,Proxy,force-remote-dns
-DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news-events.apple.com,Proxy
+DOMAIN-SUFFIX,news-edge.apple.com,Proxy
+DOMAIN-SUFFIX,apple.comscoreresearch.com,Proxy
+DOMAIN-SUFFIX,play.itunes.apple.com,Proxy
+DOMAIN-SUFFIX,play-cdn.itunes-apple.com.akadns.net,Proxy
+DOMAIN-SUFFIX,ls.apple.com,Proxy
+DOMAIN-SUFFIX,cvws.apple-dns.net,Proxy
+DOMAIN-SUFFIX,news.apple-dns.net,Proxy
+DOMAIN-SUFFIX,gateway.fe.apple-dns.net,Proxy
+DOMAIN-SUFFIX,akamaiedge.net,Proxy
+DOMAIN-SUFFIX,gs-loc.apple.com,Proxy
+DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy
+DOMAIN-SUFFIX,apple.news,Proxy
+DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy
 # 900 mymodified
-DOMAIN-SUFFIX,youtubekids.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wikipedia.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,hbo.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,docker.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtubekids.com,Proxy
+DOMAIN-SUFFIX,wikipedia.org,Proxy
+DOMAIN-SUFFIX,hbo.com,Proxy
+DOMAIN-SUFFIX,docker.com,Proxy
 # apple
-DOMAIN-SUFFIX,ocsp.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,digicert.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,entrust.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ocsp.verisign.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apps.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,itunes.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blobstore.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,music.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,itunes.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,me.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,akadns.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,aaplimg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,cdn-apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apple-cloudkit.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ocsp.apple.com,Proxy
+DOMAIN-SUFFIX,digicert.com,Proxy
+DOMAIN-SUFFIX,entrust.net,Proxy
+DOMAIN-SUFFIX,ocsp.verisign.net,Proxy
+DOMAIN-SUFFIX,apps.apple.com,Proxy
+DOMAIN-SUFFIX,itunes.apple.com,Proxy
+DOMAIN-SUFFIX,blobstore.apple.com,Proxy
+DOMAIN-SUFFIX,music.apple.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,itunes.apple.com,Proxy
+DOMAIN-SUFFIX,me.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,akadns.net,Proxy
+DOMAIN-SUFFIX,aaplimg.com,Proxy
+DOMAIN-SUFFIX,cdn-apple.com,Proxy
+DOMAIN-SUFFIX,apple.com,Proxy
+DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 
 # 手工定义的 Direct 列表
 #153
@@ -384,7 +384,7 @@ DOMAIN-SUFFIX,matchvs.com,Direct
 DOMAIN-SUFFIX,servicewechat.com,Direct
 
 
-# adblock rules refresh time: 2021-02-20 06:00:54
+# adblock rules refresh time: 2021-02-20 08:16:20
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -1260,6 +1260,7 @@ DOMAIN-SUFFIX,6i4uibyg0c82.com,Reject
 DOMAIN-SUFFIX,6l1967.cn,Reject
 DOMAIN-SUFFIX,6ped2nd3yp.com,Reject
 DOMAIN-SUFFIX,6r1lihp31d.monster,Reject
+DOMAIN-SUFFIX,6s7v78.cn,Reject
 DOMAIN-SUFFIX,6shuge.com,Reject
 DOMAIN-SUFFIX,6sxi6i74dk9m.com,Reject
 DOMAIN-SUFFIX,6ujk8x9soxhm.com,Reject
@@ -6084,6 +6085,7 @@ DOMAIN-SUFFIX,fp.czvv.com,Reject
 DOMAIN-SUFFIX,fp.nanrenwo.net,Reject
 DOMAIN-SUFFIX,fpb.sohu.com,Reject
 DOMAIN-SUFFIX,fpb1.apple886.com,Reject
+DOMAIN-SUFFIX,fpb1.tabuzhe.com,Reject
 DOMAIN-SUFFIX,fpesoigpyes.com,Reject
 DOMAIN-SUFFIX,fpiikkttbl.com,Reject
 DOMAIN-SUFFIX,fpomyspwepxxe.com,Reject
@@ -17158,106 +17160,106 @@ DOMAIN-SUFFIX,zzxhx.com,Reject
 DOMAIN-SUFFIX,zzxlukodff.com,Reject
 DOMAIN-SUFFIX,zzyonghao.com,Reject
 
-DOMAIN-SUFFIX,twitch.tv,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wikipedia.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,soundcloud.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitch.tv,Proxy
+DOMAIN-SUFFIX,wikipedia.org,Proxy
+DOMAIN-SUFFIX,soundcloud.com,Proxy
 # top500 proxy list update time: 2019-01-25 21:45:02
-DOMAIN-SUFFIX,123movies.to,Proxy,force-remote-dns
-DOMAIN-SUFFIX,4chan.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,4shared.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,adnetworkperformance.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,amazon.co.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,archive.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ask.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bbc.co.uk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bbc.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blog.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blogger.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blogspot.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blogspot.com.br,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blogspot.in,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blogspot.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bloomberg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bongacams.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bp.blogspot.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,businessinsider.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,chaturbate.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,cloudfront.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dailymail.co.uk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dailymotion.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dcinside.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,disqus.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,doubleclick.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dropbox.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,eksisozluk.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,elpais.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,extratorrent.cc,Proxy,force-remote-dns
-DOMAIN-SUFFIX,facebook.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,fbcdn.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,fc2.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,files.wordpress.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,flickr.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,free.fr,Proxy,force-remote-dns
-DOMAIN-SUFFIX,globaloffers.link,Proxy,force-remote-dns
-DOMAIN-SUFFIX,goo.gl,Proxy,force-remote-dns
-DOMAIN-SUFFIX,goo.ne.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,hclips.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,hootsuite.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,hurriyet.com.tr,Proxy,force-remote-dns
-DOMAIN-SUFFIX,instagram.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,livedoor.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ltn.com.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,media.tumblr.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,medium.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,messenger.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,microsoftonline.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,nyaa.se,Proxy,force-remote-dns
-DOMAIN-SUFFIX,nytimes.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ozock.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pinimg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pinterest.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pixabay.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pixnet.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,poptm.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pornhub.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,quora.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,rakuten.co.jp,Proxy,force-remote-dns
-DOMAIN-SUFFIX,reddituploads.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,redtube.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,reuters.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ruten.com.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,scribd.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,shutterstock.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,slideshare.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,spankbang.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,state.gov,Proxy,force-remote-dns
-DOMAIN-SUFFIX,steamcommunity.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,t.co,Proxy,force-remote-dns
-DOMAIN-SUFFIX,teepr.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,telegram.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,thepiratebay.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tradeadexchange.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tube8.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tumblr.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,twitter.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,txxx.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,upornia.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,uptodown.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,vimeo.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wordpress.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wsj.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,xhamster.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,xnxx.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,xvideos.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,yandex.ru,Proxy,force-remote-dns
-DOMAIN-SUFFIX,youtube-mp3.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,zippyshare.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,zone-telechargement.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,123movies.to,Proxy
+DOMAIN-SUFFIX,4chan.org,Proxy
+DOMAIN-SUFFIX,4shared.com,Proxy
+DOMAIN-SUFFIX,adnetworkperformance.com,Proxy
+DOMAIN-SUFFIX,amazon.co.jp,Proxy
+DOMAIN-SUFFIX,archive.org,Proxy
+DOMAIN-SUFFIX,ask.com,Proxy
+DOMAIN-SUFFIX,bbc.co.uk,Proxy
+DOMAIN-SUFFIX,bbc.com,Proxy
+DOMAIN-SUFFIX,beeg.com,Proxy
+DOMAIN-SUFFIX,blog.jp,Proxy
+DOMAIN-SUFFIX,blogger.com,Proxy
+DOMAIN-SUFFIX,blogspot.com,Proxy
+DOMAIN-SUFFIX,blogspot.com.br,Proxy
+DOMAIN-SUFFIX,blogspot.in,Proxy
+DOMAIN-SUFFIX,blogspot.jp,Proxy
+DOMAIN-SUFFIX,bloomberg.com,Proxy
+DOMAIN-SUFFIX,bongacams.com,Proxy
+DOMAIN-SUFFIX,bp.blogspot.com,Proxy
+DOMAIN-SUFFIX,businessinsider.com,Proxy
+DOMAIN-SUFFIX,chaturbate.com,Proxy
+DOMAIN-SUFFIX,cloudfront.net,Proxy
+DOMAIN-SUFFIX,dailymail.co.uk,Proxy
+DOMAIN-SUFFIX,dailymotion.com,Proxy
+DOMAIN-SUFFIX,dcinside.com,Proxy
+DOMAIN-SUFFIX,disqus.com,Proxy
+DOMAIN-SUFFIX,doubleclick.net,Proxy
+DOMAIN-SUFFIX,dropbox.com,Proxy
+DOMAIN-SUFFIX,eksisozluk.com,Proxy
+DOMAIN-SUFFIX,elpais.com,Proxy
+DOMAIN-SUFFIX,extratorrent.cc,Proxy
+DOMAIN-SUFFIX,facebook.com,Proxy
+DOMAIN-SUFFIX,fbcdn.net,Proxy
+DOMAIN-SUFFIX,fc2.com,Proxy
+DOMAIN-SUFFIX,files.wordpress.com,Proxy
+DOMAIN-SUFFIX,flickr.com,Proxy
+DOMAIN-SUFFIX,free.fr,Proxy
+DOMAIN-SUFFIX,globaloffers.link,Proxy
+DOMAIN-SUFFIX,goo.gl,Proxy
+DOMAIN-SUFFIX,goo.ne.jp,Proxy
+DOMAIN-SUFFIX,hclips.com,Proxy
+DOMAIN-SUFFIX,hootsuite.com,Proxy
+DOMAIN-SUFFIX,hurriyet.com.tr,Proxy
+DOMAIN-SUFFIX,instagram.com,Proxy
+DOMAIN-SUFFIX,livedoor.jp,Proxy
+DOMAIN-SUFFIX,ltn.com.tw,Proxy
+DOMAIN-SUFFIX,media.tumblr.com,Proxy
+DOMAIN-SUFFIX,medium.com,Proxy
+DOMAIN-SUFFIX,messenger.com,Proxy
+DOMAIN-SUFFIX,microsoftonline.com,Proxy
+DOMAIN-SUFFIX,nyaa.se,Proxy
+DOMAIN-SUFFIX,nytimes.com,Proxy
+DOMAIN-SUFFIX,ozock.com,Proxy
+DOMAIN-SUFFIX,pinimg.com,Proxy
+DOMAIN-SUFFIX,pinterest.com,Proxy
+DOMAIN-SUFFIX,pixabay.com,Proxy
+DOMAIN-SUFFIX,pixnet.net,Proxy
+DOMAIN-SUFFIX,poptm.com,Proxy
+DOMAIN-SUFFIX,pornhub.com,Proxy
+DOMAIN-SUFFIX,quora.com,Proxy
+DOMAIN-SUFFIX,rakuten.co.jp,Proxy
+DOMAIN-SUFFIX,reddituploads.com,Proxy
+DOMAIN-SUFFIX,redtube.com,Proxy
+DOMAIN-SUFFIX,reuters.com,Proxy
+DOMAIN-SUFFIX,ruten.com.tw,Proxy
+DOMAIN-SUFFIX,scribd.com,Proxy
+DOMAIN-SUFFIX,shutterstock.com,Proxy
+DOMAIN-SUFFIX,slideshare.net,Proxy
+DOMAIN-SUFFIX,spankbang.com,Proxy
+DOMAIN-SUFFIX,state.gov,Proxy
+DOMAIN-SUFFIX,steamcommunity.com,Proxy
+DOMAIN-SUFFIX,t.co,Proxy
+DOMAIN-SUFFIX,teepr.com,Proxy
+DOMAIN-SUFFIX,telegram.org,Proxy
+DOMAIN-SUFFIX,thepiratebay.org,Proxy
+DOMAIN-SUFFIX,tradeadexchange.com,Proxy
+DOMAIN-SUFFIX,tube8.com,Proxy
+DOMAIN-SUFFIX,tumblr.com,Proxy
+DOMAIN-SUFFIX,twimg.com,Proxy
+DOMAIN-SUFFIX,twitter.com,Proxy
+DOMAIN-SUFFIX,txxx.com,Proxy
+DOMAIN-SUFFIX,upornia.com,Proxy
+DOMAIN-SUFFIX,uptodown.com,Proxy
+DOMAIN-SUFFIX,vimeo.com,Proxy
+DOMAIN-SUFFIX,whatsapp.com,Proxy
+DOMAIN-SUFFIX,wordpress.com,Proxy
+DOMAIN-SUFFIX,wsj.com,Proxy
+DOMAIN-SUFFIX,xhamster.com,Proxy
+DOMAIN-SUFFIX,xnxx.com,Proxy
+DOMAIN-SUFFIX,xvideos.com,Proxy
+DOMAIN-SUFFIX,yandex.ru,Proxy
+DOMAIN-SUFFIX,youtube-mp3.org,Proxy
+DOMAIN-SUFFIX,youtube.com,Proxy
+DOMAIN-SUFFIX,ytimg.com,Proxy
+DOMAIN-SUFFIX,zippyshare.com,Proxy
+DOMAIN-SUFFIX,zone-telechargement.com,Proxy
 
 
 DOMAIN-KEYWORD,google,Proxy
