--- a/sr_backcn_ad.conf
+++ b/sr_backcn_ad.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2021-02-20 06:00:56
+# build time: 2021-02-20 08:16:21
 
 [General]
 bypass-system = true
@@ -220,7 +220,7 @@ DOMAIN-SUFFIX,kikibt8.com,Reject
 DOMAIN-SUFFIX,kikibt8.xyz,Reject
 
 
-# adblock rules refresh time: 2021-02-20 06:00:54
+# adblock rules refresh time: 2021-02-20 08:16:20
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -1096,6 +1096,7 @@ DOMAIN-SUFFIX,6i4uibyg0c82.com,Reject
 DOMAIN-SUFFIX,6l1967.cn,Reject
 DOMAIN-SUFFIX,6ped2nd3yp.com,Reject
 DOMAIN-SUFFIX,6r1lihp31d.monster,Reject
+DOMAIN-SUFFIX,6s7v78.cn,Reject
 DOMAIN-SUFFIX,6shuge.com,Reject
 DOMAIN-SUFFIX,6sxi6i74dk9m.com,Reject
 DOMAIN-SUFFIX,6ujk8x9soxhm.com,Reject
@@ -5920,6 +5921,7 @@ DOMAIN-SUFFIX,fp.czvv.com,Reject
 DOMAIN-SUFFIX,fp.nanrenwo.net,Reject
 DOMAIN-SUFFIX,fpb.sohu.com,Reject
 DOMAIN-SUFFIX,fpb1.apple886.com,Reject
+DOMAIN-SUFFIX,fpb1.tabuzhe.com,Reject
 DOMAIN-SUFFIX,fpesoigpyes.com,Reject
 DOMAIN-SUFFIX,fpiikkttbl.com,Reject
 DOMAIN-SUFFIX,fpomyspwepxxe.com,Reject
