--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -39,15 +39,16 @@ DOMAIN-SUFFIX,alibaba.com,Direct
 DOMAIN-SUFFIX,aliexpress.com,Direct
 DOMAIN-SUFFIX,alipay.com,Direct
 DOMAIN-SUFFIX,allegro.pl,Direct
-DOMAIN-SUFFIX,amazon.ca,Direct
-DOMAIN-SUFFIX,amazon.co.uk,Direct
-DOMAIN-SUFFIX,amazon.com,Direct
-DOMAIN-SUFFIX,amazon.de,Direct
-DOMAIN-SUFFIX,amazon.es,Direct
-DOMAIN-SUFFIX,amazon.fr,Direct
-DOMAIN-SUFFIX,amazon.in,Direct
-DOMAIN-SUFFIX,amazon.it,Direct
-DOMAIN-SUFFIX,amazonaws.com,Direct
+DOMAIN-SUFFIX,amazon.cn,Direct
+DOMAIN-SUFFIX,amazon.ca,Proxy
+DOMAIN-SUFFIX,amazon.co.uk,Proxy
+DOMAIN-SUFFIX,amazon.com,Proxy
+DOMAIN-SUFFIX,amazon.de,Proxy
+DOMAIN-SUFFIX,amazon.es,Proxy
+DOMAIN-SUFFIX,amazon.fr,Proxy
+DOMAIN-SUFFIX,amazon.in,Proxy
+DOMAIN-SUFFIX,amazon.it,Proxy
+DOMAIN-SUFFIX,amazonaws.com,Proxy
 DOMAIN-SUFFIX,ameblo.jp,Direct
 DOMAIN-SUFFIX,americanexpress.com,Direct
 DOMAIN-SUFFIX,aol.com,Direct
