--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -491,7 +491,7 @@ DOMAIN-SUFFIX,youtubekids.com,Proxy
 DOMAIN-SUFFIX,wikipedia.org,Proxy
 DOMAIN-SUFFIX,hbo.com,Proxy
 DOMAIN-SUFFIX,docker.com,Proxy
-# apple
+# Apple
 DOMAIN-SUFFIX,ocsp.apple.com,Proxy
 DOMAIN-SUFFIX,digicert.com,Proxy
 DOMAIN-SUFFIX,entrust.net,Proxy
@@ -509,6 +509,7 @@ DOMAIN-SUFFIX,aaplimg.com,Proxy
 DOMAIN-SUFFIX,cdn-apple.com,Proxy
 DOMAIN-SUFFIX,apple.com,Proxy
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
+DOMAIN-SUFFIX,push.apple.com,DIRECT
 
 
 DOMAIN-KEYWORD,google,PROXY
