--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -510,6 +510,7 @@ DOMAIN-SUFFIX,cdn-apple.com,Proxy
 DOMAIN-SUFFIX,apple.com,Proxy
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN-SUFFIX,mesu.apple.com,DIRECT
 
 
 DOMAIN-KEYWORD,google,PROXY
