--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -511,6 +511,18 @@ DOMAIN-SUFFIX,apple.com,Proxy
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,mesu.apple.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+DOMAIN,api.smoot.apple.com,DIRECT
+DOMAIN,captive.apple.com,DIRECT
+DOMAIN,configuration.apple.com,DIRECT
+DOMAIN,guzzoni.apple.com,DIRECT
+DOMAIN,reserve-prime.apple.com,DIRECT
+DOMAIN-SUFFIX,ess.apple.com,DIRECT
+DOMAIN-SUFFIX,lcdn-locator.apple.com,DIRECT
+DOMAIN-SUFFIX,lcdn-registration.apple.com,DIRECT
+DOMAIN,gs-loc-cn.apple.com,DIRECT
+DOMAIN,smp-device-content.apple.com,DIRECT
+DOMAIN-KEYWORD,smp-device,DIRECT
 
 
 DOMAIN-KEYWORD,google,PROXY
