--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -389,9 +389,22 @@ IP-CIDR,127.0.0.0/8,DIRECT
 
 # 手工定义的 Proxy 列表
 DOMAIN-SUFFIX,theinitium.com,Proxy
+# Youtube
+DOMAIN-KEYWORD,youtube,Proxy
 DOMAIN-SUFFIX,youtu.be,Proxy
-DOMAIN-SUFFIX,youtube.com,Proxy
+DOMAIN-SUFFIX,youtubekids.com,Proxy
+DOMAIN-SUFFIX,googlevideo.com,Proxy
+DOMAIN-SUFFIX,gvt2.com,Proxy
+DOMAIN-SUFFIX,yt.be,Proxy
+DOMAIN-SUFFIX,ytimg.com,Proxy
+# Netflix
 DOMAIN-SUFFIX,netflix.com,Proxy
+DOMAIN-SUFFIX,netflix.net,Proxy
+DOMAIN-SUFFIX,nflxext.com,Proxy
+DOMAIN-SUFFIX,nflximg.com,Proxy
+DOMAIN-SUFFIX,nflximg.net,Proxy
+DOMAIN-SUFFIX,nflxso.net,Proxy
+DOMAIN-SUFFIX,nflxvideo.net,Proxy
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy
 #Telegram
@@ -487,7 +500,6 @@ DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy
 DOMAIN-SUFFIX,apple.news,Proxy
 DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy
 # 900 mymodified
-DOMAIN-SUFFIX,youtubekids.com,Proxy
 DOMAIN-SUFFIX,wikipedia.org,Proxy
 DOMAIN-SUFFIX,hbo.com,Proxy
 DOMAIN-SUFFIX,docker.com,Proxy
@@ -527,7 +539,6 @@ DOMAIN-KEYWORD,smp-device,DIRECT
 
 DOMAIN-KEYWORD,google,PROXY
 DOMAIN-KEYWORD,gmail,PROXY
-DOMAIN-KEYWORD,youtube,PROXY
 DOMAIN-KEYWORD,facebook,PROXY
 DOMAIN-SUFFIX,fb.me,PROXY
 DOMAIN-SUFFIX,fbcdn.net,PROXY
@@ -536,7 +547,6 @@ DOMAIN-KEYWORD,instagram,PROXY
 DOMAIN-KEYWORD,dropbox,PROXY
 DOMAIN-SUFFIX,twimg.com,PROXY
 DOMAIN-KEYWORD,blogspot,PROXY
-DOMAIN-SUFFIX,youtu.be,PROXY
 DOMAIN-KEYWORD,whatsapp,PROXY
 
 DOMAIN-SUFFIX,cn,DIRECT
