--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -398,13 +398,89 @@ DOMAIN-SUFFIX,gvt2.com,Proxy
 DOMAIN-SUFFIX,yt.be,Proxy
 DOMAIN-SUFFIX,ytimg.com,Proxy
 # Netflix
-DOMAIN-SUFFIX,netflix.com,Proxy
-DOMAIN-SUFFIX,netflix.net,Proxy
-DOMAIN-SUFFIX,nflxext.com,Proxy
-DOMAIN-SUFFIX,nflximg.com,Proxy
-DOMAIN-SUFFIX,nflximg.net,Proxy
-DOMAIN-SUFFIX,nflxso.net,Proxy
-DOMAIN-SUFFIX,nflxvideo.net,Proxy
+USER-AGENT,Argo*,PROXY
+DOMAIN-KEYWORD,netflix,PROXY
+DOMAIN,netflix.com.edgesuite.net,PROXY
+DOMAIN-SUFFIX,netflix.com,PROXY
+DOMAIN-SUFFIX,netflix.com.edgesuite.net,PROXY
+DOMAIN-SUFFIX,netflix.net,PROXY
+DOMAIN-SUFFIX,netflixdnstest0.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest1.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest2.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest3.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest4.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest5.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest6.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest7.com,PROXY
+DOMAIN-SUFFIX,netflixdnstest8.com,PROXY
+DOMAIN-SUFFIX,nflxext.com,PROXY
+DOMAIN-SUFFIX,nflximg.com,PROXY
+DOMAIN-SUFFIX,nflximg.net,PROXY
+DOMAIN-SUFFIX,nflxso.net,PROXY
+DOMAIN-SUFFIX,nflxvideo.net,PROXY
+IP-CIDR,103.87.204.0/22,PROXY,no-resolve
+IP-CIDR,103.87.205.0/24,PROXY,no-resolve
+IP-CIDR,103.87.206.0/24,PROXY,no-resolve
+IP-CIDR,103.87.207.0/24,PROXY,no-resolve
+IP-CIDR,108.175.0.0/16,PROXY,no-resolve
+IP-CIDR,185.2.0.0/16,PROXY,no-resolve
+IP-CIDR,185.9.0.0/16,PROXY,no-resolve
+IP-CIDR,185.9.188.0/22,PROXY,no-resolve
+IP-CIDR,192.173.0.0/16,PROXY,no-resolve
+IP-CIDR,198.38.0.0/16,PROXY,no-resolve
+IP-CIDR,198.45.0.0/16,PROXY,no-resolve
+IP-CIDR,203.116.0.0/16,PROXY,no-resolve
+IP-CIDR,203.198.0.0/20,PROXY,no-resolve
+IP-CIDR,203.198.80.0/21,PROXY,no-resolve
+IP-CIDR,203.75.84.0/24,PROXY,no-resolve
+IP-CIDR,203.83.220.0/22,PROXY,no-resolve
+IP-CIDR,207.45.72.0/22,PROXY,no-resolve
+IP-CIDR,207.45.73.0/24,PROXY,no-resolve
+IP-CIDR,208.75.76.0/22,PROXY,no-resolve
+IP-CIDR,218.102.32.0/19,PROXY,no-resolve
+IP-CIDR,219.76.0.0/17,PROXY,no-resolve
+IP-CIDR,23.246.0.0/16,PROXY,no-resolve
+IP-CIDR,23.78.0.0/16,PROXY,no-resolve
+IP-CIDR,34.192.0.0/16,PROXY,no-resolve
+IP-CIDR,34.208.0.0/12,PROXY,no-resolve
+IP-CIDR,34.248.0.0/13,PROXY,no-resolve
+IP-CIDR,35.160.0.0/13,PROXY,no-resolve
+IP-CIDR,37.77.0.0/16,PROXY,no-resolve
+IP-CIDR,38.72.126.0/24,PROXY,no-resolve
+IP-CIDR,44.224.0.0/16,PROXY,no-resolve
+IP-CIDR,44.230.0.0/16,PROXY,no-resolve
+IP-CIDR,45.57.0.0/16,PROXY,no-resolve
+IP-CIDR,52.0.0.0/15,PROXY,no-resolve
+IP-CIDR,52.10.0.0/15,PROXY,no-resolve
+IP-CIDR,52.12.0.0/15,PROXY,no-resolve
+IP-CIDR,52.22.0.0/16,PROXY,no-resolve
+IP-CIDR,52.24.0.0/14,PROXY,no-resolve
+IP-CIDR,52.32.0.0/14,PROXY,no-resolve
+IP-CIDR,52.40.0.0/14,PROXY,no-resolve
+IP-CIDR,52.48.0.0/14,PROXY,no-resolve
+IP-CIDR,52.5.0.0/16,PROXY,no-resolve
+IP-CIDR,52.54.0.0/16,PROXY,no-resolve
+IP-CIDR,52.7.0.0/16,PROXY,no-resolve
+IP-CIDR,52.71.40.0/16,PROXY,no-resolve
+IP-CIDR,52.72.0.0/16,PROXY,no-resolve
+IP-CIDR,52.88.0.0/15,PROXY,no-resolve
+IP-CIDR,54.0.0.0/16,PROXY,no-resolve
+IP-CIDR,54.148.0.0/15,PROXY,no-resolve
+IP-CIDR,54.175.0.0/16,PROXY,no-resolve
+IP-CIDR,54.186.0.0/15,PROXY,no-resolve
+IP-CIDR,54.188.0.0/15,PROXY,no-resolve
+IP-CIDR,54.213.0.0/16,PROXY,no-resolve
+IP-CIDR,54.214.128.0/17,PROXY,no-resolve
+IP-CIDR,54.68.0.0/15,PROXY,no-resolve
+IP-CIDR,54.74.0.0/15,PROXY,no-resolve
+IP-CIDR,54.76.0.0/15,PROXY,no-resolve
+IP-CIDR,54.85.0.0/16,PROXY,no-resolve
+IP-CIDR,54.86.0.0/16,PROXY,no-resolve
+IP-CIDR,64.120.128.0/17,PROXY,no-resolve
+IP-CIDR,66.197.128.0/17,PROXY,no-resolve
+IP-CIDR,69.53.224.0/19,PROXY,no-resolve
+IP-CIDR,8.41.4.0/24,PROXY,no-resolve
+
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy
 #Telegram
@@ -523,6 +599,7 @@ DOMAIN-SUFFIX,apple.com,Proxy
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,mesu.apple.com,DIRECT
+
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN,api.smoot.apple.com,DIRECT
 DOMAIN,captive.apple.com,DIRECT
