--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -481,6 +481,27 @@ IP-CIDR,66.197.128.0/17,PROXY,no-resolve
 IP-CIDR,69.53.224.0/19,PROXY,no-resolve
 IP-CIDR,8.41.4.0/24,PROXY,no-resolve
 
+# Disney Plus
+USER-AGENT,Disney*,PROXY
+DOMAIN-SUFFIX,adobedtm.com,PROXY
+DOMAIN-SUFFIX,bam.nr-date.net,PROXY
+DOMAIN-SUFFIX,bamgrid.com,PROXY
+DOMAIN-SUFFIX,braze.com,PROXY
+DOMAIN-SUFFIX,cdn.optimizely.com,PROXY
+DOMAIN-SUFFIX,cdn.registerdisney.go.com,PROXY
+DOMAIN-SUFFIX,cws.conviva.com,PROXY
+DOMAIN-SUFFIX,d9.flashtalking.com,PROXY
+DOMAIN-SUFFIX,disney.demdex.net,PROXY
+DOMAIN-SUFFIX,disney.my.sentry.io,PROXY
+DOMAIN-SUFFIX,disneyplus.bn5x.net,PROXY
+DOMAIN-SUFFIX,disneyplus.com,PROXY
+DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,PROXY
+DOMAIN-SUFFIX,disney-plus.net,PROXY
+DOMAIN-SUFFIX,disney-portal.my.onetrust.com,PROXY
+DOMAIN-SUFFIX,dssott.com,PROXY
+DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,PROXY
+DOMAIN-SUFFIX,js-agent.newrelic.com,PROXY
+
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy
 #Telegram
